# wandergrove

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  requirements.txt  resources.txt  test.ipynb  test.py  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/test/: test.ipynb  test.py
architecture/: .$data_architecture.drawio.bkp  data_architecture.drawio
docker/: Dockerfile.dev  README-DOCKER.md
env/: gis_env.yml
env/test/: test.ipynb  test.py
legacy/: LICENSE
legacy/legacy2/: Makefile
legacy/src/data_pipeline/: a_data_pipeline.py
legacy/src/data_pipeline/natural_earth/: natural_earth_pipeline.py
legacy/src/exceptions/: web.py
legacy/src/notebooks/: sandbox.ipynb
legacy/src/utils/: io.py
src/: run_data_pipeline.py  sandbox.ipynb
src/data-pipeline/: sandbox.go
src/data_pipeline/: airflow-commands.sh  install-airflow.sh  pyproject.toml
src/data_pipeline/data/: .~lock.hnp_keystone_plant_ecoregions.csv#  hnp_keystone_plant_ecoregions.csv  sample.html
src/data_pipeline/natural_earth/: large_urls.txt  natural_earth_config.py  natural_earth_pipeline.py  natural_earth_scraper.py
src/data_pipeline/src/hnp/: hnp_config.py  hnp_exceptions.py  hnp_handler.py  hnp_keystone_plant.py  hnp_keystone_plant_ecoregion.py
src/data_pipeline/src/logs/: json_formatter.py  json_logger.py  json_logger_mixin.py
src/data_pipeline/src/utils/: base_pipeline_handler.py  config.py  context.py
src/notebooks/: natural_earth_map_layering.ipynb
